issues with header, content overflowing

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h6 {
 	border: 1px solid black;
 }
 .nav {
-	margin-block-end: 5rem;
+	margin-block-end: 3.5rem;
 }
 .nav-bar {
 	display: flex;
